added new images to the pages

--- a/bathrooms.html
+++ b/bathrooms.html
@@ -63,7 +63,7 @@
 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12 ">
+                <div class="col-xs-12">
                     <h1 class="portfolio-h1">Bathrooms</h1>
                     <hr class="block-divider-portfolio">
                     <div class="portfolio-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
@@ -73,54 +73,74 @@
                 </div>
             </div>
         </div>
-
-
-        <div class="container-fluid project-images">
+         <div class="container-fluid portfolio-images">
             <div class="row">
-                <div class="col-sm-4">
-                    <div class="project-image">
-                        <img src="https://placehold.it/150x80?text=IMAGE" style="width:70%" alt="Image">
+                <div class="col-xs-12 col-lg-4">
+                    <div class="portfolio-image">
+                        <img src="images/Bathrooms/Portfolio_Bathroom_Design_1.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
+                        <div class="middle">
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" <p>Lorem ipsum etc etc etc</p>
+                            </div>
+                        </div>
                     </div>
-                    <h4 class="caption-project">Arklow</h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link">Bathroom in Dublin</a></h4>
                 </div>
-                <div class="col-sm-4">
-                    <div class="project-image">
-                        <img src="https://placehold.it/150x80?text=IMAGE" style="width:70%" alt="Image">
+                <div class="col-xs-12 col-lg-4">
+                    <div class="portfolio-image">
+                        <img src="images/Bathrooms/Portfolio_Bathroom_Design_1a.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
+                        <div class="middle">
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link"  <p>Lorem ipsum etc etc etc</p>
+                            </div>
+                        </div>
                     </div>
-                    <h4 class="caption-project">Arklow</h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link">Bathroom in Wicklow</a></h4>
                 </div>
-                <div class="col-sm-4">
-                    <div class="project-image">
-                        <img src="https://placehold.it/150x80?text=IMAGE" style="width:70%" alt="Image">
+                <div class="col-xs-12 col-lg-4">
+                    <div class="portfolio-image">
+                        <img src="images/Bathrooms/Portfolio_Bathroom_Design_2.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
+                        <div class="middle">
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link"  <p>Lorem ipsum etc etc etc</p>
+                            </div>
+                        </div>
                     </div>
-                    <h4 class="caption-project">Arklow</h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link">Bathroom in Wexford</a></h4>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
-                    <div class="project-image">
-                        <img src="https://placehold.it/150x80?text=IMAGE" style="width:70%" alt="Image">
+                <div class="col-xs-12 col-lg-4">
+                    <div class="portfolio-image">
+                        <img src="https://placehold.it/1200x800?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
+                        <div class="middle">
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link"  <p>Lorem ipsum etc etc etc</p>
+                            </div>
+                        </div>
                     </div>
-                    <h4 class="caption-project">Arklow</h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link">Bathroom in Cork</a></h4>
                 </div>
-                <div class="col-sm-4">
-                    <div class="project-image">
-                        <img src="https://placehold.it/150x80?text=IMAGE" style="width:70%" alt="Image">
+                <div class="col-xs-12 col-lg-4">
+                    <div class="portfolio-image">
+                        <img src="https://placehold.it/1200x800?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
+                        <div class="middle">
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link"  <p>Lorem ipsum etc etc etc</p>
+                            </div>
+                        </div>
                     </div>
-                    <h4 class="caption-project">Arklow</h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link">Bathroom in Dublin</a></h4>
                 </div>
-                <div class="col-sm-4">
-                    <div class="project-image">
-                        <img src="https://placehold.it/150x80?text=IMAGE" style="width:70%" alt="Image">
+                <div class="col-xs-12 col-lg-4">
+                    <div class="portfolio-image">
+                        <img src="https://placehold.it/1200x800?text=IMAGE" style="width:100%" alt="Image">
+                        <div class="middle">
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link"<p>Lorem ipsum etc etc etc</p>
+                            </div>
+                        </div>
                     </div>
-                    <h4 class="caption-project">Arklow</h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link">Bathroom in Dublin</h4>
                 </div>
             </div>
-        </div>
+            </div>
         <!-- Main Content -->
     </section>
-
-
     <!-- Footer -->
 
     <footer class="container-fluid text-center ">
