--- a/livingrooms.html
+++ b/livingrooms.html
@@ -77,77 +77,65 @@
             <div class="row">
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
-                        <a href="kitchens.html">
-                        <img src="/images/Kitchens/Portfolio_Kitchen_Design_41.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image" a href="kitchens.html" >
-                        </a>
+                        <img src="images/Living Rooms/Portfolio_Livingroom_1.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="kitchens.html">Explore completed Kitchen Projects</a>
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" <p>Lorem ipsum etc etc etc</p>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="kitchens.html">Kitchens</a></h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="livingrooms.html">Living Room in Dublin</a></h4>
                 </div>
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
-                        <a href="bedrooms.html">
-                        <img src="/images/Bedrooms/Portfolio_Bedroom_DesignPage_2.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image"> 
-                        </a>
+                        <img src="images/Living Rooms/Portfolio_Livingroom_Design.JPG" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="bedrooms.html">Explore completed Bedroom Projects</a>
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link"  <p>Lorem ipsum etc etc etc</p>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="bedrooms.html">Bedrooms</a></h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="livingrooms.html">Living Room in Wicklow</a></h4>
                 </div>
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
-                        <a href="bathrooms.html">
-                        <img src="/images/Bathrooms/Portfolio_Bathroom_Design_1.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
-                         </a>
+                        <img src="https://placehold.it/1200x800?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="bathrooms.html">Explore completed Bathroom Project</a>
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link"  <p>Lorem ipsum etc etc etc</p>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="bathrooms.html">Bathrooms</a></h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="livingrooms.html">Living Room in Wexford</a></h4>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
-                        <a href="livingrooms.html">
-                        <img src="/images/Living Rooms/Portfolio_Livingroom_1.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
-                         </a>
-                        <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="livingrooms.html">Explore completed Living Room Project</a>
-                            </div>
-                        </div>
-                    </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="livingrooms.html">Living Rooms</a></h4>
-                </div>
-                <div class="col-xs-12 col-lg-4">
-                    <div class="portfolio-image">
-                        <a href="commercial.html">
                         <img src="https://placehold.it/1200x800?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
-                         </a>
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="commercial.html">Explore Commercial Project</a>
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link"  <p>Lorem ipsum etc etc etc</p>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="commercial.html">Commercial</a></h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="livingrooms.html">Living Room in Cork</a></h4>
                 </div>
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
-                        <a href="custom.html">
-                        <img src="/images/CSFurniture/Portfolio_Custom_Furniture_1.jpeg" style="width:100%" alt="Image">
-                         </a>
+                        <img src="https://placehold.it/1200x800?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="custom.html">Explore Custom Furniture</a>
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link"  <p>Lorem ipsum etc etc etc</p>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="commercial.html">Custom Furniture</a></h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="livingrooms.html">Living Room in Dublin</a></h4>
+                </div>
+                <div class="col-xs-12 col-lg-4">
+                    <div class="portfolio-image">
+                        <img src="https://placehold.it/1200x800?text=IMAGE" style="width:100%" alt="Image">
+                        <div class="middle">
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link"  <p>Lorem ipsum etc etc etc</p>
+                            </div>
+                        </div>
+                    </div>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="livingrooms.html">Living Room in Dublin</h4>
                 </div>
             </div>
         </div>
