--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
                         <a href="kitchens.html">
-                        <img src="/images/Kitchens/Portfolio_Kitchen_Design_41.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image" a href="kitchens.html" >
+                        <img src="images/Kitchens/Portfolio_Kitchen_Design_41.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image" a href="kitchens.html" >
                         </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="kitchens.html">Explore completed Kitchen Projects</a>
@@ -90,7 +90,7 @@
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
                         <a href="bedrooms.html">
-                        <img src="/images/Bedrooms/Portfolio_Bedroom_DesignPage_2.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image"> 
+                        <img src="images/Bedrooms/Portfolio_Bedroom_DesignPage_2.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image"> 
                         </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="bedrooms.html">Explore completed Bedroom Projects</a>
@@ -102,7 +102,7 @@
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
                         <a href="bathrooms.html">
-                        <img src="/images/Bathrooms/Portfolio_Bathroom_Design_1.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
+                        <img src="images/Bathrooms/Portfolio_Bathroom_Design_1.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                          </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="bathrooms.html">Explore completed Bathroom Project</a>
@@ -116,7 +116,7 @@
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
                         <a href="livingrooms.html">
-                        <img src="/images/Living Rooms/Portfolio_Livingroom_1.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
+                        <img src="images/Living Rooms/Portfolio_Livingroom_1.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                          </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="livingrooms.html">Explore completed Living Room Project</a>
@@ -140,7 +140,7 @@
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
                         <a href="custom.html">
-                        <img src="/images/CSFurniture/Portfolio_Custom_Furniture_1.jpeg" style="width:100%" alt="Image">
+                        <img src="images/CSFurniture/Portfolio_Custom_Furniture_1.jpeg" style="width:100%" alt="Image">
                          </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="custom.html">Explore Custom Furniture</a>
