--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AC Temp. site</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css" type="text/css" />
@@ -58,12 +59,11 @@
     </nav>
     <!-- NAV -->
 
-
     <section>
         <!-- Slider code. Got from W3 schools -->
         <!-- Slider -->
-        <div class=" container-fluid slider ">
-            <div id="myCarousel " class="carousel slide " data-ride="carousel">
+        <div class="container-fluid slider">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -74,27 +74,26 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="/images/Home Page Slider Images/1_Home_Page_Slider.jpeg" alt="Image">
+                        <img src="/images/Home Page Slider Images/1_Home_Page_Slider.jpeg" alt="image">
                     </div>
 
                     <div class="item">
-                        <img src="/images/Home Page Slider Images/2_Home_Page_Slider2.jpg" alt="Image">
+                        <img src="/images/Home Page Slider Images/2_Home_Page_Slider.jpeg" alt="image">
                     </div>
-
+                    
                     <div class="item">
-                        <img src="//images/Home Page Slider Images/3_Home_Page_Slider3.jpg" alt="Image">
+                        <img src="/images/Home Page Slider Images/3_Home_Page_Slider.jpeg" alt="image">
                     </div>
                 </div>
-
                 <!-- Left and right controls -->
                 <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
                 <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
             </div>
         </div>
         <!-- Slider -->
