--- a/services.html
+++ b/services.html
@@ -70,36 +70,16 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <!-- Main Content -->
-    <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12 col-lg-8">
-                    <img class="services-images" src="images/services.jpg"></img>
+                <div class="col-xs-12 col-lg-4">
+                        <img src="images/Kitchens/Portfolio_Kitchen_Design_2.JPG" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
+                    </div>
+                <div class="col-xs-12 col-lg-4">
+                    <img src="images/Bathrooms/Design Collections.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                 </div>
                 <div class="col-xs-12 col-lg-4">
-                    <h2 class="services-h2">Interior Design</h2>
-                    <hr class="block-divider-portfolio">
-                    <div class="services-p">Lorem ipsum dolor sit amet, "I haven't been sober for months" nibh euismod tincidunt ut laoreet dolore magna aliquam.
-                        <p>Lorem ipsum dolor sit amet, "I haven't been sober for months" nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-lg-4">
-                    <h2 class="services-h2">Design Collections</h2>
-                    <hr class="block-divider-portfolio">
-                    <div class="services-p">Lorem ipsum dolor sit amet, "I haven't been sober for months" nibh euismod tincidunt ut laoreet dolore magna aliquam.
-                        </p>
-                        <p>Lorem ipsum dolor sit amet, "I haven't been sober for months" nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-lg-8">
-                    <img class="services-images" src="images/services.jpg"></img>
+                    <img src="images/Bedrooms/Portfolio_Bedroom_Design_3.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                 </div>
             </div>
         </div>
