updated the captions on images and added some new images

--- a/bathrooms.html
+++ b/bathrooms.html
@@ -83,7 +83,6 @@
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link">Bathroom in Dublin</a></h4>
                 </div>
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
@@ -93,49 +92,44 @@
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link">Bathroom in Wicklow</a></h4>
                 </div>
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
-                        <img src="images/Bathrooms/Portfolio_Bathroom_Design_2.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
+                        <img src="images/Bathrooms/Portfolio_Bathroom_Design_1.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link"  <p>Lorem ipsum etc etc etc</p>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link">Bathroom in Wexford</a></h4>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
-                        <img src="https://placehold.it/1200x800?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
+                        <img src="images/Bathrooms/Portfolio_Bathroom_Design_1.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link"  <p>Lorem ipsum etc etc etc</p>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link">Bathroom in Cork</a></h4>
                 </div>
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
-                        <img src="https://placehold.it/1200x800?text=IMAGE" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
+                        <img src="images/Bathrooms/Portfolio_Bathroom_Design_1.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link"  <p>Lorem ipsum etc etc etc</p>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link">Bathroom in Dublin</a></h4>
                 </div>
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
-                        <img src="https://placehold.it/1200x800?text=IMAGE" style="width:100%" alt="Image">
+                        <img src="images/Bathrooms/Portfolio_Bathroom_Design_1.jpg" style="width:100%" alt="Image">
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link"<p>Lorem ipsum etc etc etc</p>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link">Bathroom in Dublin</h4>
                 </div>
             </div>
             </div>
