--- a/contact.html
+++ b/contact.html
@@ -70,32 +70,38 @@
                             <p>01 663 6804</p>
                             <p>086 826 9995</p>
                             <hr class="block-divider-contact">
-                            <li class="contact-item"><i class="fa fa-envelope"></i><span>Email</span>
-                            </li>
-                            <p>
-                                <a href="angela@conbudesign.com">angela@conbudesign.com</a>
-                            </p>
-                            <hr class="block-divider-contact ">
-                            <li class="contact-item "><i class="fa fa-twitter "></i><span>Twitter</span>
-                            </li>
-                            <p>
-                                <a href="https://twitter.com/ConbuInteriors">@conbuinteriors</a>
-                            </p>
-                            <hr class="block-divider-contact ">
-                            <li class="contact-item "><i class="fa fa-pinterest "></i><span>Pinterest</span>
-                            </li>
-                            <p>
-                                <a href="https://www.pinterest.ie/ConbuInteriors/overview">www.pinterest.ie/ConbuInteriors/overview</a>
-                            </p>
+
+                            <a href="angela@conbudesign.com">
+                                <li class="contact-item"><i class="fa fa-envelope"></i><span>Email</span>
+                                </li>
+                            </a>
                             <hr class="block-divider-contact">
-                            <li class="contact-item "><i class="fa fa-linkedin "></i><span>Linkedln</span>
-                            </li>
-                            <p>
-                                <a href="https://www.linkedin.com/in/angelatconnolly">www.linkedin.com/in/angelatconnolly</a>
-                            </p>
+
+                            <a href="https://twitter.com/ConbuInteriors">
+                                <li class="contact-item "><i class="fa fa-twitter "></i><span>Twitter</span>
+                                </li>
+                            </a>
+                            <hr class="block-divider-contact">
+
+                            <a href="https://www.pinterest.ie/ConbuInteriors/overview">
+                                <li class="contact-item "><i class="fa fa-pinterest "></i><span>Pinterest</span>
+                                </li>
+                            </a>
+                            <hr class="block-divider-contact">
+
+                            <a href="https://www.linkedin.com/in/angelatconnolly">
+                                <li class="contact-item "><i class="fa fa-linkedin "></i><span>Linkedln</span>
+                                </li>
+                            </a>
                         </ul>
                     </div>
                 </div>
+
+
+
+
+
+
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                     <h4 class="contact-h4">Ask a Question or Book a Consultation</h4>
                     <form action="/action_page.php ">
