--- a/mystory.html
+++ b/mystory.html
@@ -65,12 +65,12 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="mystory-image">
-                        <img src="images/head.jpg" class="imgage-in-mystory-page" alt="Image">
+                        <img src="images/Angela/Angela Photo.jpg" class="imgage-in-mystory-page" alt="Image">
                     </div>
-                    <!-- Used W3 Schools for code for audio embed -->
+                    <!-- Used W3 Schools for code for audio embed
                     <audio controls>
                     <source src="Bottles_Empty.mp3" type="audio/mpeg"> Your browser does not support the audio element.
-                    </audio>
+                    </audio> -->
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <div class="mystory-text">
