--- a/portfolio.html
+++ b/portfolio.html
@@ -85,19 +85,17 @@
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="kitchens.html">Kitchens</a></h4>
                 </div>
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
                         <a href="bedrooms.html">
-                        <img src="images/Bedrooms/Portfolio_Bedroom_DesignPage_2.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image"> 
+                        <img src="images/Bedrooms/Portfolio_Bedroom_Design_4a.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image"> 
                         </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="bedrooms.html">Explore completed Bedroom Projects</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="bedrooms.html">Bedrooms</a></h4>
                 </div>
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
@@ -109,21 +107,19 @@
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="bathrooms.html">Bathrooms</a></h4>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
                         <a href="livingrooms.html">
-                        <img src="images/Living Rooms/Portfolio_Livingroom_1.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
+                        <img src="images/Living Rooms/Portfolio_Livingroom_Design_2.jpg" class="imgage-in-portfolio-page" style="width:100%" alt="Image">
                          </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="livingrooms.html">Explore completed Living Room Project</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="livingrooms.html">Living Rooms</a></h4>
                 </div>
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
@@ -135,19 +131,17 @@
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="commercial.html">Commercial</a></h4>
                 </div>
                 <div class="col-xs-12 col-lg-4">
                     <div class="portfolio-image">
                         <a href="custom.html">
-                        <img src="images/CSFurniture/Portfolio_Custom_Furniture_1.jpeg" style="width:100%" alt="Image">
+                        <img src="images/CSFurniture/Portfolio_Custom_made_Fire_Surround.jpg" style="width:100%" alt="Image">
                          </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="custom.html">Explore Custom Furniture</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="commercial.html">Custom Furniture</a></h4>
                 </div>
             </div>
         </div>
